# paintjob-designer

./: .gitignore  PaintjobDesigner.spec  README.md  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: release.yml
config/profiles/: saphi.json  vanilla-ntsc-u.json
documentation/: README.md  library_format.md  paintjob_library_format.md  paintjobs-explained.md  skin_library_format.md  technical-documentation.md  user-guide.md
documentation/schema/: paintjob_library_format.md  skin_library_format.md
launcher/: run.bat
paintjob_designer/: __main__.py  constants.py  schema_keys.py  services.py
paintjob_designer/color/: converter.py  gradient.py  transform.py
paintjob_designer/config/: iso_root_validator.py  store.py
paintjob_designer/core/: __init__.py  binary_reader.py  bitstream_reader.py  container.py  slugifier.py
paintjob_designer/ctr/: animation.py  reader.py  vertex_assembler.py
paintjob_designer/exporters/: binary_exporter.py  source_code_exporter.py
paintjob_designer/gui/: app_icon.py  editor_mode.py  main_window.py
paintjob_designer/models/: __init__.py  color.py  ctr_mesh.py  metadata_edit.py  multi_region_texture_import.py  paintjob.py  palette.py  profile.py  quantized_texture.py  rotated_texture.py  skin.py  slot_regions.py  vram_page.py
paintjob_designer/paintjob/: reader.py  single_reader.py  (+2 more)
schema/: library.json  paintjobs_library_schema.json  skins_library_schema.json
tests/: conftest.py
tools/: dump_schema.py  generate_icon.py  inspect_clut_palette.py  populate_skin_menu_cluts.py  populate_skin_slots.py
(+140 files in other folders)
