[project]
name = "paintjob-designer"
version = "0.6.0"
description = "Paintjob designer for Crash Team Racing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [ {name = "Garma"} ]
dependencies = [
    "PySide6-Essentials>=6.5",
    "PyOpenGL>=3.1",
    "numpy>=1.26",
    "Pillow>=10.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[project.scripts]
paintjob-designer = "paintjob_designer.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["paintjob_designer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
